@@ -1213,10 +1213,6 @@ expr_stmt|;
 comment|// copy the css if required
 if|if
 condition|(
-name|todir
-operator|!=
-literal|null
-operator|&&
 name|xslFile
 operator|==
 literal|null
@@ -1224,7 +1220,16 @@ condition|)
 block|{
 name|File
 name|css
-init|=
+decl_stmt|;
+if|if
+condition|(
+name|todir
+operator|!=
+literal|null
+condition|)
+block|{
+name|css
+operator|=
 operator|new
 name|File
 argument_list|(
@@ -1232,7 +1237,19 @@ name|todir
 argument_list|,
 literal|"ivy-report.css"
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
+else|else
+block|{
+name|css
+operator|=
+operator|new
+name|File
+argument_list|(
+literal|"ivy-report.css"
+argument_list|)
+expr_stmt|;
+block|}
 if|if
 condition|(
 operator|!
