@@ -312,6 +312,21 @@ name|File
 argument_list|(
 name|cache
 argument_list|,
+literal|"report/ivy-report.css"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// IVY-826
+name|assertTrue
+argument_list|(
+operator|new
+name|File
+argument_list|(
+name|cache
+argument_list|,
 literal|"report/apache-resolve-simple-default.graphml"
 argument_list|)
 operator|.
@@ -328,6 +343,128 @@ name|setDefault
 argument_list|(
 name|oldLocale
 argument_list|)
+expr_stmt|;
+block|}
+block|}
+specifier|public
+name|void
+name|testCopyCssIfTodirNotSet
+parameter_list|()
+block|{
+name|Locale
+name|oldLocale
+init|=
+name|Locale
+operator|.
+name|getDefault
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+comment|// set the locale to UK as workaround for SUN bug 6240963
+name|Locale
+operator|.
+name|setDefault
+argument_list|(
+name|Locale
+operator|.
+name|UK
+argument_list|)
+expr_stmt|;
+name|IvyResolve
+name|res
+init|=
+operator|new
+name|IvyResolve
+argument_list|()
+decl_stmt|;
+name|res
+operator|.
+name|setProject
+argument_list|(
+name|project
+argument_list|)
+expr_stmt|;
+name|res
+operator|.
+name|setFile
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/java/org/apache/ivy/ant/ivy-simple.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|res
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|report
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|report
+operator|.
+name|setGraph
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"apache-resolve-simple-default.html"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"ivy-report.css"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// IVY-826
+block|}
+finally|finally
+block|{
+name|Locale
+operator|.
+name|setDefault
+argument_list|(
+name|oldLocale
+argument_list|)
+expr_stmt|;
+operator|new
+name|File
+argument_list|(
+literal|"apache-resolve-simple-default.html"
+argument_list|)
+operator|.
+name|delete
+argument_list|()
+expr_stmt|;
+operator|new
+name|File
+argument_list|(
+literal|"ivy-report.css"
+argument_list|)
+operator|.
+name|delete
+argument_list|()
 expr_stmt|;
 block|}
 block|}
